# gtknowa

./: Makefile.w32  ProjectHome.md  configure.in  gtknowa.c
po/: gtknowa.pot  ja.po
trunk/: Makefile.am  README  gtknowa.spec.in
trunk/po/: Makefile  Makefile.w32
